--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,6 +10,10 @@
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
+      <hr>
+      <p>{{fcmInfo.token}}</p>
+      <hr>
+      <p>{{fcmInfo.data}}</p>
     </ion-list>
   </ion-content>
 
